# rostelekom_test

./: LICENSE  README.md
backend/service_a/: env.example  main.py  pyproject.toml
backend/service_a/interfaces/: i_repository.py
backend/service_a/repositories/: eqp_repository.py
backend/service_a/services/: configurator_service.py
backend/service_a/tools/: bootstrap.py
backend/service_a/web/entrypoints/: equipment.py  index.py
backend/service_a/web/schemas/: body_validator.py  equipment_schema.py
backend/service_a/web/tools/: entrypoints_registrator.py  initializer.py
backend/service_b/: Dockerfile  configurator.py  env.example  main.py  pyproject.toml
backend/service_b/broker/: rmq_consumer.py  rmq_producer.py
backend/service_b/config/: app_config.py  pg_config.py  rabbitmq_config.py
backend/service_b/dto/: broker_message_dto.py  configuration_result_dto.py  equipment_dto.py  http_dto.py
backend/service_b/integration/: http_client.py
backend/service_b/interfaces/: base_enum.py  base_model.py  i_client.py  i_message_broker.py
backend/service_b/services/: configurator_service.py
backend/service_b/storage/: configuration_model.py  pg_client.py
backend/service_b/tools/: bootstrap.py  enums.py  exceptions.py
backend/service_b/web/entrypoints/: equipment.py  index.py
backend/service_b/web/schemas/: equipment_schema.py  response_schema.py
backend/service_b/web/tools/: initializer.py  middlewares.py  router_registrator.py  worker.py
ci/local/: docker-compose.yaml  env.example
ci/local/migrations/: V1__init_migration.sql
docs/: TASK.md
