[project]
name = "service-a"
version = "1.0.0"
description = "Сервис A"
authors = [
    {name = "vladushka2000",email = "nazipovvt@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
