[tool.poetry]
name = "service-a"
version = "1.0.0"
description = "Сервис A"
authors = ["vladushka2000 <nazipovvt@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
dotenv = "^0.9.9"
waitress = "^3.0.2"
flask = "^3.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
