[tool.poetry]
name = "service-b"
version = "1.0.0"
description = "Сервис B"
authors = ["vladushka2000 <nazipovvt@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.5.5"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.2"
asyncpg = "^0.30.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

